--- a/index.html
+++ b/index.html
@@ -284,17 +284,18 @@
                 <div class="col-md-4 mb-3">
 
                     <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
+                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 300px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
+                            <p class="card-text text-secondary">I designed a sleek and intuitive dashboard using HTML
+                                and CSS, ensuring a user-friendly and visually appealing interface. </p>
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
+                                <a href="https://dashboard-gilt-mu.vercel.app/" target="_blank"
+                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
+                                <a href="https://github.com/Muhammadirfan40/Dashboard" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
                         </div>
                     </div>
@@ -304,17 +305,19 @@
                 <div class="col-md-4 mb-3">
 
                     <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
+                        <img src="./images/PortfolioDesign.png" class="card-img-top trans img-fluid"
+                            alt="image not found" style="height: 300px;">
                         <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
+                            <h5 class="card-title">HTML / CSS / Bootstrap</h5>
+                            <p class="card-text text-secondary">
+                                I designed a responsive portfolio using HTML, CSS, and Bootstrap, creating a visually
+                                stunning and adaptable showcase for my work. </p>
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
+                                <a href="https://portfolio-design-swart.vercel.app/" target="_blank"
+                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
+                                <a href="https://github.com/Muhammadirfan40/PortfolioDesign" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
                         </div>
                     </div>
@@ -324,142 +327,26 @@
                 <div class="col-md-4 mb-3">
 
                     <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
+                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 300px;">
                         <div class="card-body">
                             <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
+                            <p class="card-text text-secondary">I designed a sleek and intuitive dashboard using HTML
+                                and CSS, ensuring a user-friendly and visually appealing interface. </p>
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
+                                <a href="https://dashboard-gilt-mu.vercel.app/" target="_blank"
+                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
+                                <a href="https://github.com/Muhammadirfan40/Dashboard" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="col-md-4 mb-3">
 
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
 
-                </div>
-
-                <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-4 mb-3">
-
-                    <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid"
-                            alt="image not found">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">This is my first work of Basic HTML and CSS . I maked
-                                the first
-                                Dashboard . </p>
-                            <div
-                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="#" class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="#" class="btn btn-outline-info queryBTN ">View Code</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
 
             </div>
         </div>
