--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
                                 <a href="https://dashboard-gilt-mu.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
+                                    class="btn btn-info queryBTN ">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/Dashboard" target="_blank"
                                     class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
@@ -315,7 +315,7 @@
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
                                 <a href="https://portfolio-design-swart.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
+                                    class="btn btn-info queryBTN ">View Live</a>
                                 <a href="https://github.com/Muhammadirfan40/PortfolioDesign" target="_blank"
                                     class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
@@ -327,17 +327,19 @@
                 <div class="col-md-4 mb-3">
 
                     <div class="card h-100 ">
-                        <img src="./images/first-project.jpg" class="card-img-top trans img-fluid" alt="image not found"
+                        <img src="./images/fruits web.png" class="card-img-top trans img-fluid" alt="image not found"
                             style="height: 300px;">
                         <div class="card-body">
-                            <h5 class="card-title">HTML / CSS</h5>
-                            <p class="card-text text-secondary">I designed a sleek and intuitive dashboard using HTML
-                                and CSS, ensuring a user-friendly and visually appealing interface. </p>
+                            <h5 class="card-title">HTML / CSS / Bootstrap</h5>
+                            <p class="card-text text-secondary">
+                                I designed a responsive Fruits-Website using HTML, CSS, and Bootstrap, creating a
+                                visually
+                                stunning and adaptable showcase for my work. </p>
                             <div
                                 class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
-                                <a href="https://dashboard-gilt-mu.vercel.app/" target="_blank"
-                                    class="btn btn-info queryBTN ">Visit Dashboard</a>
-                                <a href="https://github.com/Muhammadirfan40/Dashboard" target="_blank"
+                                <a href="https://fruits-website-delta.vercel.app/" target="_blank"
+                                    class="btn btn-info queryBTN ">View Live</a>
+                                <a href="https://github.com/Muhammadirfan40/Fruits-Website" target="_blank"
                                     class="btn btn-outline-info queryBTN ">View Code</a>
                             </div>
                         </div>
