--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
                             <div class="d-flex justify-content-center align-items-center h-100">
                                 <img src="./images/Aims school.png" class="img-fluid rounded-start" alt="..."
-                                    loading="lazy">
+                                    loading="lazy" style="height: 150px;">>
                             </div>
 
                         </div>
@@ -421,11 +421,9 @@
                                 <h5 class="card-title">The Aim School Lodhran</h5>
                                 <p class="text-secondary mb-1">Matric Science</p>
                                 <p class="mb-1">febrary 2017</p>
-                                <p class="text-secondary mb-0">Grade: 65%</p>
-                                <p class="card-text"> I completed my matriculation at The Aim School Lodhran, where I
-                                    developed a
-                                    solid academic foundation. The school's supportive environment and rigorous
-                                    curriculum helped me excel and prepare for future challenges.</p>
+                                <p class="card-text">I completed my matriculation at The Aim School Lodhran, where I
+                                    gained a strong academic foundation. The school's support and challenging curriculum
+                                    prepared me well for the future.</p>
 
                             </div>
                         </div>
@@ -475,7 +473,8 @@
                             <div class="d-flex justify-content-center align-items-center h-100">
 
                                 <img src="./images/ripah college.jpeg" onerror="this.src='./images/bootstrap.png';"
-                                    class="img-fluid rounded-start" alt="..." loading="lazy" onerror="">
+                                    class="img-fluid rounded-start" alt="..." loading="lazy" onerror=""
+                                    style="height: 150px;">
 
                             </div>
 
@@ -487,14 +486,10 @@
 
                                 <h5 class="card-title">The Ripah College Lodhran</h5>
                                 <p class="text-secondary mb-1"> ICS Computer Science</p>
-                                <p class="mb-1">September 2029 - 2021</p>
-                                <p class="text-secondary mb-0">Grade: 65%</p>
+                                <p class="mb-1">September 2019 - 2021</p>
                                 <p class="card-text">
-                                    I completed my intermediate studies Computer Science at
-                                    The Ripah College Lodhran, where I honed my skills in both computer science and
-                                    technology. The
-                                    program's comprehensive curriculum prepared me well for further studies and careers
-                                    in the tech field. </p>
+                                    Studied basic computer science topics, including programming and computer systems.
+                                </p>
 
                             </div>
 
@@ -548,7 +543,8 @@
 
                             <div class="d-flex justify-content-center align-items-center h-100">
 
-                                <img src="./images/iub logo.png" class="img-fluid rounded-start" alt="...">
+                                <img src="./images/iub logo.png" class="img-fluid rounded-start" alt="..."
+                                    style="height: 150px;">
 
                             </div>
 
@@ -556,18 +552,15 @@
 
                         <div class="col-md-8">
 
-                            <div class="card-body">
+                            <div class="card-body  ">
 
                                 <h5 class="card-title">The Islamia University of Bahawalpur</h5>
                                 <p class="text-secondary mb-1">Bachelor in Computer Science (Continue ... )</p>
-                                <p class="mb-1">September 2021 - 2025</p>
-                                <p class="text-secondary mb-0">Grade: 3.1 CGPA</p>
+                                <p class="mb-1">September 2021 - 2025 (Expected)</p>
+
                                 <p class="card-text">
-                                    I earned my Bachelor’s degree in Computer Science from The Islamia University of
-                                    Bahawalpur, where I
-                                    gained in-depth knowledge and practical experience in the tech field. The program's
-                                    rigorous coursework and hands-on projects equipped me with the skills needed to
-                                    excel in the industry.</p>
+                                    Studying computer science with an emphasis on programming, problem-solving, and
+                                    working with data.</p>
 
                             </div>
 
