--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <nav class="navbar container navbar-expand-lg " id="mynav">
 
-                <h4 class="fw-bold text-info">Irfan</h4>
+                <h4 class="fw-bold fs-2 text-info">Irfan</h4>
 
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -82,7 +82,7 @@
 
             <div class="btns">
                 <!-- <button type="button" class="btn btn-light px-4 py-3 rounded-4 fw-semibold">Download Resume</button> -->
-                <a href="" class="btn btn-light px-4 py-3 rounded-4 fw-semibold">Download Resume</a>
+                <a href="" class="btn btn-light px-4 py-3 rounded-4 fw-semibold abcdef">Download Resume</a>
             </div>
 
 
@@ -114,7 +114,7 @@
                             turning ideas into visually <br>
                             stunning, user-friendly websites.</h4>
                         <p class="text-muted mb-4 ">
-                            And I love to create beautiful and efficient websites for my customers. I love going through
+                            I love to create beautiful and efficient websites for my customers. I love going through
                             the
                             entire process with the customer from concept, to design and then development and launch
                         </p>
@@ -122,31 +122,47 @@
                         <div class="row">
 
                             <div class="col-md-6">
+
                                 <div class="">
+
                                     <h6 class="fs-5">
                                         <i class="ri-arrow-right-line fs-4 iconabout"></i> HTML <span
-                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> Bootstrap
+                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
                                     </h6>
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> Node <span
-                                            class="iconabout">/</span> Node Exprees
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> React JS <span
+                                            class="iconabout">/</span> Node <span class="iconabout">/</span> Express
+                                    </h6>
+                                    <h6 class="fs-5">
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> HTML <span
+                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
                                     </h6>
 
                                 </div>
+
                             </div>
 
                             <div class="col-md-6">
+
                                 <div class="">
                                     <h6 class="fs-5">
-                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> React js
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> Bootstrap <span
+                                            class="iconabout">/</span> Tailwind
                                     </h6>
 
 
                                     <h6 class="fs-5">
                                         <i class="ri-arrow-right-line fs-4 iconabout"></i> Mongo DB
                                     </h6>
+                                    <h6 class="fs-5">
+                                        <i class="ri-arrow-right-line fs-4 iconabout"></i> HTML <span
+                                            class="iconabout">/</span> CSS <span class="iconabout">/</span> JavaScript
+                                    </h6>
                                 </div>
+
                             </div>
+
+
 
                         </div>
 
@@ -347,11 +363,81 @@
 
                 </div>
 
+                <div class="col-md-4 mb-3">
+
+                    <div class="card h-100 ">
+                        <img src="./images/zaviaApp.PNG" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 300px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Mern Stack </h5>
+                            <p class="card-text text-secondary">
+                                I built a hospital patient entry system with the MERN stack, delivering a secure and
+                                user-friendly platform for managing patient data efficiently. </p>
+                            <div
+                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                                <a href="https://zavia.vercel.app/" target="_blank" class="btn btn-info queryBTN ">View
+                                    Live</a>
+                                <a href="https://github.com/Muhammadirfan40/zavia" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 mb-3">
+
+                    <div class="card h-100 ">
+                        <img src="./images/zaviaApp.PNG" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 300px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Mern Stack </h5>
+                            <p class="card-text text-secondary">
+                                I built a hospital patient entry system with the MERN stack, delivering a secure and
+                                user-friendly platform for managing patient data efficiently. </p>
+                            <div
+                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                                <a href="https://zavia.vercel.app/" target="_blank" class="btn btn-info queryBTN ">View
+                                    Live</a>
+                                <a href="https://github.com/Muhammadirfan40/zavia" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 mb-3">
+
+                    <div class="card h-100 ">
+                        <img src="./images/zaviaApp.PNG" class="card-img-top trans img-fluid" alt="image not found"
+                            style="height: 300px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Mern Stack </h5>
+                            <p class="card-text text-secondary">
+                                I built a hospital patient entry system with the MERN stack, delivering a secure and
+                                user-friendly platform for managing patient data efficiently. </p>
+                            <div
+                                class="d-flex justify-content-between flex-wrap gap-2 justify-content-lg-evenly justify-content-md-evenly">
+                                <a href="https://zavia.vercel.app/" target="_blank" class="btn btn-info queryBTN ">View
+                                    Live</a>
+                                <a href="https://github.com/Muhammadirfan40/zavia" target="_blank"
+                                    class="btn btn-outline-info queryBTN ">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
 
 
             </div>
+
+
+
+
         </div>
+
 
     </section>
 
@@ -409,7 +495,7 @@
 
                             <div class="d-flex justify-content-center align-items-center h-100">
                                 <img src="./images/Aims school.png" class="img-fluid rounded-start" alt="..."
-                                    loading="lazy" style="height: 150px;">>
+                                    loading="lazy" style="height: 150px;">
                             </div>
 
                         </div>
@@ -418,9 +504,9 @@
 
                             <div class="card-body">
 
-                                <h5 class="card-title">The Aim School Lodhran</h5>
-                                <p class="text-secondary mb-1">Matric Science</p>
-                                <p class="mb-1">febrary 2017</p>
+                                <h3 class="card-title">The Aim School Lodhran</h3>
+                                <h6 class="text-secondary mb-1">Matric</h6>
+                                <p class="mb-1">February 2017</p>
                                 <p class="card-text">I completed my matriculation at The Aim School Lodhran, where I
                                     gained a strong academic foundation. The school's support and challenging curriculum
                                     prepared me well for the future.</p>
@@ -484,8 +570,8 @@
 
                             <div class="card-body">
 
-                                <h5 class="card-title">The Ripah College Lodhran</h5>
-                                <p class="text-secondary mb-1"> ICS Computer Science</p>
+                                <h3 class="card-title">The Ripah College Lodhran</h3>
+                                <h6 class="text-secondary mb-1"> ICS Computer Science</h6>
                                 <p class="mb-1">September 2019 - 2021</p>
                                 <p class="card-text">
                                     Studied basic computer science topics, including programming and computer systems.
@@ -554,8 +640,8 @@
 
                             <div class="card-body  ">
 
-                                <h5 class="card-title">The Islamia University of Bahawalpur</h5>
-                                <p class="text-secondary mb-1">Bachelor in Computer Science (Continue ... )</p>
+                                <h3 class="card-title">The Islamia University of Bahawalpur</h3>
+                                <h6 class="text-secondary mb-1">Bachelor in Computer Science (Continue ... )</h6>
                                 <p class="mb-1">September 2021 - 2025 (Expected)</p>
 
                                 <p class="card-text">
